# atom-native

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  main.cc  meson.build
.github/workflows/: build.yml
atom/: CMakeLists.txt  meson.build
atom/src/: bracket-matcher-view.cc  bracket-matcher-view.h  bracket-matcher.cc  bracket-matcher.h  clipboard.cc  clipboard.h  cursor.cc  cursor.h  decoration-manager.cc  decoration-manager.h  decoration.cc  decoration.h  grammar-registry.cc  grammar-registry.h  grammar.cc  grammar.h  layer-decoration.cc  layer-decoration.h  layer-decoration.js  match-manager.cc  match-manager.h  null-grammar.cc  null-grammar.h  select-next.cc  select-next.h  selection.cc  selection.h  syntax-scope-map.cc  syntax-scope-map.h  text-editor.cc  text-editor.h  text-mate-language-mode.cc  text-mate-language-mode.h  tree-sitter-grammar.cc  tree-sitter-grammar.h  tree-sitter-language-mode.cc  tree-sitter-language-mode.h  whitespace.cc  whitespace.h
atom/test/: text-editor-spec.cc
git-utils/: CMakeLists.txt
language-c/: CMakeLists.txt  main.cc  meson.build
language-c/grammars/: tree-sitter-c.cc  tree-sitter-cpp.cc
language-css/: CMakeLists.txt  meson.build
language-css/grammars/: tree-sitter-css.cc
language-go/: CMakeLists.txt  meson.build
language-go/grammars/: tree-sitter-go.cc
language-html/: CMakeLists.txt  meson.build
language-html/grammars/: tree-sitter-html.cc
language-javascript/: CMakeLists.txt  meson.build
language-javascript/grammars/: tree-sitter-javascript.cc
language-json/: CMakeLists.txt  meson.build
language-json/grammars/: tree-sitter-json.cc
language-python/: CMakeLists.txt  meson.build
language-python/grammars/: tree-sitter-python.cc
language-rust/: CMakeLists.txt  meson.build
language-rust/grammars/: tree-sitter-rust.cc
oniguruma/: CMakeLists.txt
src/: bracket-matcher.cc  bracket-matcher.h  decoration-manager.cc  decoration.h  grammar-registry.h  layer-decoration.cc  layer-decoration.h  select-next.h  select-next.js  selection.cc  selection.h  syntax-scope-map.cc  syntax-scope-map.h  text-editor.cc  text-editor.h  tree-sitter-language-mode.cc  tree-sitter-language-mode.h
superstring/: CMakeLists.txt  binding.gyp  meson.build
superstring/benchmark/native/: marker-index-benchmark.cc
superstring/src/: flat_set.h  marker-index.h  native-point.cc  native-point.h  native-range.cc  native-range.h  native-text-buffer.cc  native-text-buffer.h  optional.h  patch.cc  patch.h  regex.cc  regex.h  text-diff.cc  text-slice.cc  text-slice.h  text.cc  text.h
superstring/src/core/: marker-index.cc  marker-index.h  native-range.h  native-text-buffer.cc  native-text-buffer.h  patch.cc  patch.h  range.cc  range.h  regex.h  text-slice.cc  text-slice.h
superstring/test/native/: encoding-conversion-test.cc  native-text-buffer-test.cc  patch-test.cc  test-helpers.cc  test-helpers.h  text-diff-test.cc  text-test.cc
text-buffer/: CMakeLists.txt  LICENSE.md  meson.build
text-buffer/src/: constants.h  default-history-provider.cc  default-history-provider.h  default-history-provider.js  display-layer.cc  display-layer.h  display-marker-layer.cc  display-marker-layer.h  display-marker-layer.js  display-marker.cc  display-marker.h  display-marker.js  event-kit.h  file.cc  file.h  fs-plus.cc  fs-plus.h  fs-plus.js  helpers.cc  helpers.h  is-character-pair.cc  is-character-pair.h  is-character-pair.js  language-mode.cc  language-mode.h  marker-layer.cc  marker-layer.h  marker-layer.js  marker.cc  marker.h  marker.js  path.cc  path.h  point-helpers.cc  point-helpers.h  point-helpers.js  point.cc  point.h  point.js  range.cc  (+8 more)
tree-sitter/: CMakeLists.txt  binding.gyp  meson.build
tree-sitter/src/: parser.cc  parser.h  tree-cursor.cc  tree-cursor.h  tree-sitter.cc  tree-sitter.h  tree.cc  tree.h
