cmake_minimum_required(VERSION 3.13)
project(atom-native)

add_subdirectory(superstring)
add_subdirectory(text-buffer)
add_subdirectory(tree-sitter)
add_subdirectory(git-utils)
add_subdirectory(atom)
add_subdirectory(language-c)
add_subdirectory(language-go)
add_subdirectory(language-javascript)
add_subdirectory(language-python)
add_subdirectory(language-rust)
